fix word wrapping in hero component

--- a/src/features/layout/hero/hero.module.scss
+++ b/src/features/layout/hero/hero.module.scss
@@ -21,6 +21,7 @@
             font-weight: 800;
             text-transform: uppercase;
             line-height: 100%;
+            white-space: nowrap;
     
             .headingGradient {
                 -webkit-background-clip: text;
